# tg_bot_with_inline_buttons

./: .gitignore  README.md  config.py  main.py  pyproject.toml
button_bot/: bot.py  callback_datas.py
button_bot/games/: reversi_game.py
button_bot/handlers/: callback_handlers.py  message_handlers.py
button_bot/keyboards/: reversi_board.py  reversi_keyboard.py
